updated and implemented mindgame memory and levels plus added authentication for Settings in Login mode plus some bug fixes
